all done for seo

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Ccr's personal portfolio site" />
+    <meta
+      name="description"
+      content="Personal portfolio site, Shishir Bhutel (cceer bhurtel) is a mern stack developer at gigatech, Nepal. He is a freelance full stack developer at fiverr,  with good knowledge of Node.js, react.js, express.js, mongodb, sql, microservices etc"
+    />
+    <meta name="robots" content="noindex, nofollow" />
+    <meta name="googlebot" content="noindex, nofollow" />
+    <meta
+      name="keywords"
+      content="shishir, bhurtel, developer, web developer, full stack developer, mern stack developer, node.js, react.js, react, node, cceer bhurtel, cceer, ccr"
+    />
     <link rel="shortcut icon" type="image/jpg" href="./favicon.ico" />
     <link
       rel="icon"
@@ -16,7 +25,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
     />
 
-    <title>Dev-Porfolio</title>
+    <title>Shishir Bhurel | Full Stack Developer -Web Developer at gigatech</title>
   </head>
   <body>
     <div id="root"></div>
@@ -31,7 +40,7 @@
     </script> -->
     <script type="text/javascript">
       window.addEventListener('DOMContentLoaded', (event) => {
-        $('.num').counterUp({ delay: 10, time: 1000, trigerOnce: true });
+        $('.num').counterUp({ delay: 0, time: 1000 });
       });
     </script>
   </body>
